Source/WebCore/platform/graphics/filters/CustomFilterProgram.cpp
@@ -85,5 +85,10 @@ CustomFilterProgramInfo CustomFilterProgram::programInfo() const
     return CustomFilterProgramInfo(vertexShaderString(), fragmentShaderString(), m_programType, m_mixSettings);
 }
 
+bool CustomFilterProgram::operator==(const CustomFilterProgram& o) const
+{
+    return m_programType == o.m_programType && (m_programType != PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE || m_mixSettings == o.m_mixSettings);
+}
+
 } // namespace WebCore
 #endif // ENABLE(CSS_SHADERS)
