Source/WebCore/platform/graphics/filters/CustomFilterProgramInfo.cpp
@@ -78,12 +78,14 @@ unsigned CustomFilterProgramInfo::hash() const
 {
     // At least one of the shaders needs to be non-null.
     ASSERT(!m_vertexShaderString.isNull() || !m_fragmentShaderString.isNull());
+
+    bool blendsElementTexture = (m_programType == PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE);
     uintptr_t hashCodes[5] = {
         hashPossiblyNullString(m_vertexShaderString),
         hashPossiblyNullString(m_fragmentShaderString),
-        m_programType == PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE,
-        m_programType == PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE ? m_mixSettings.blendMode : 0,
-        m_programType == PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE ? m_mixSettings.compositeOperator : 0
+        blendsElementTexture,
+        blendsElementTexture ? m_mixSettings.blendMode : 0,
+        blendsElementTexture ? m_mixSettings.compositeOperator : 0
     };
     return StringHasher::hashMemory<sizeof(hashCodes)>(&hashCodes);
 }
@@ -93,15 +95,10 @@ bool CustomFilterProgramInfo::operator==(const CustomFilterProgramInfo& o) const
     ASSERT(!isHashTableDeletedValue());
     ASSERT(!o.isHashTableDeletedValue());
 
-    if (m_programType == PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE)
-        return m_vertexShaderString == o.m_vertexShaderString
-            && m_fragmentShaderString == o.m_fragmentShaderString
-            && m_programType == o.m_programType
-            && m_mixSettings == o.m_mixSettings;
-
-    return m_vertexShaderString == o.m_vertexShaderString
-        && m_fragmentShaderString == o.m_fragmentShaderString
-        && m_programType == o.m_programType;
+    return m_programType == o.m_programType
+        && (m_programType != PROGRAM_TYPE_BLENDS_ELEMENT_TEXTURE || m_mixSettings == o.m_mixSettings)
+        && m_vertexShaderString == o.m_vertexShaderString
+        && m_fragmentShaderString == o.m_fragmentShaderString;
 }
 
 } // namespace WebCore
